SAS-08: BG flicker fixed? maybe was never an issue to begin with

--- a/apps/store/src/styles.css
+++ b/apps/store/src/styles.css
@@ -135,6 +135,12 @@
   body {
     @apply bg-background text-foreground;
   }
+  .section-bg-primary {
+    @apply bg-primary-foreground w-full h-full;
+  }
+  .section-bg-secondary {
+    @apply bg-secondary w-full h-full;
+  }
 }
 
 @layer utilities {
